# coordinates-transformation-api

./: .dockerignore  .gitignore  .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  .prettierignore  .yamlfmt  .yamllint  Dockerfile  EXAMPLE_REQUESTS.md  KP-API-geospatial.md  NL-API.md  OGC-API-Features-CRS.md  README.md  epsg.csv  main.py  mypy.ini  openapi.json  pyproject.toml  test.py
.githooks/: pre-commit
.github/: dependabot.yaml
.github/workflows/: codeql.yaml  codeql.yml  linting-and-tests.yaml  release.yaml
coordinates_transformation_api/: main.py  models.py  settings.py  util.py
coordinates_transformation_api/assets/: openapi.yaml
coordinates_transformation_api/fastapi_rfc7807/: README.md  middleware.py
coordinates_transformation_api/limit_middleware/: middleware.py
docs/: KP-API-geospatial.md  NL-API.md  OGC-API-Common.md  OGC-API-Features-CRS.md
example/: EXAMPLES.md  polygon.json
src/coordinate_transformation_api/: __init__.py  constants.py  crs_transform.py  main.py  models.py  settings.py  types.py  util.py
src/coordinate_transformation_api/assets/: config.yaml  logging.conf  openapi.yaml
src/coordinate_transformation_api/assets/crs/: bonaire_config.yaml  nl_config.yaml  saba_config.yaml  st_eustatius_config.yaml
src/coordinate_transformation_api/cityjson/: models.py
src/coordinate_transformation_api/fastapi_rfc7807/: README.md  middleware.py  schema.py
src/coordinate_transformation_api/limit_middleware/: middleware.py
src/coordinates_transformation_api/: callback.py  constants.py  crs_transform.py  main.py  models.py  settings.py  types.py  util.py
src/coordinates_transformation_api/assets/: openapi.yaml
src/coordinates_transformation_api/cityjson/: models.py
src/coordinates_transformation_api/fastapi_rfc7807/: middleware.py
tests/: conftest.py  test_cityjson_transformation.py  test_exclude_transformation.py  test_extract_authority_code.py  test_geojson_bbox.py  test_geojson_transformation.py  test_get_individual_crs_from_compound.py  test_get_individual_epsg_code.py  test_get_precision.py  test_models.py  test_only_points_raises_request_validation_error.py  test_request_body_within_valid_bbox.py  test_transform_coordinates.py  test_transform_endpoint.py  test_transform_shapely.py  test_transformer_selection.py  test_util.py  test_validation.py  test_validation_bonaire_crs.py  test_validation_nl_crs.py  test_validation_saba_crs.py  test_validation_st_eustatius_crs.py  util.py
tests/data/: bonaire_validation_data.csv  feature-bbox.json  feature-collection-7930.json  feature-collection-geometry-collection.json  feature-geometry-collection.json  feature.json  geometry-collection-bbox.json  geometry-collection.json  geometry.json  house_1.city.json  linestrings-multi.json  linestrings-punten.json  linestrings-within-bbox.json  linestrings.json  nl_validation_data.csv  points.json  polygons-multi.json  polygons.json  saba_validation_data.csv  st_eustatius_validation_data.csv  test_2d_with_epoch.json  test_wgs_epoch.json  validation_data.csv
